--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/a">web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -156,7 +156,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
                                 </li>
 
                                 <li>
-                                    <i class="icons"><a href="https://mobirise.com" class="etl-icon icon-compass mbr-iconfont mbr-iconfont-features4" style="color: rgb(230, 230, 230);"></a></i>
+                                    <i class="icons"><span class="etl-icon icon-compass mbr-iconfont mbr-iconfont-features4" style="color: rgb(230, 230, 230);"></span></i>
                                     <h5>Best practices&nbsp;</h5>
                                 </li>
                             </ul>
@@ -179,7 +179,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><a href="https://mobirise.com" class="mbri-cash mbr-iconfont mbr-iconfont-features3"></a></div>
+                  <div class="card-img"><span class="mbri-cash mbr-iconfont mbr-iconfont-features3"></span></div>
                   <div class="card-block">
                     <h4 class="card-title">Earn interest by 
 <div>lending crypto assets</div></h4>
@@ -193,7 +193,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-mobile mbr-iconfont mbr-iconfont-features3"></a></div>
+                    <div class="card-img"><span class="etl-icon icon-mobile mbr-iconfont mbr-iconfont-features3"></span></div>
                     <div class="card-block">
                         <h4 class="card-title">Raise liquidity 
 <div>against your holdings</div></h4>
@@ -207,7 +207,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features3"></a></div>
+                    <div class="card-img"><span class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features3"></span></div>
                     <div class="card-block">
                         <h4 class="card-title">Borrow crypto 
 <div>assets to go short</div></h4>
@@ -221,7 +221,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-global mbr-iconfont mbr-iconfont-features3"></a></div>
+                    <div class="card-img"><span class="etl-icon icon-global mbr-iconfont mbr-iconfont-features3"></span></div>
                     <div class="card-block">
                         <h4 class="card-title">Cover 
 <div>inventory gap</div></h4>
