--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -151,7 +151,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
                                 </li>
 
                                  <li>
-                                    <i class="icons"><a href="https://mobirise.com" class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features4" style="color: rgb(230, 230, 230);"></a></i>
+                                    <i class="icons"><span class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features4" style="color: rgb(230, 230, 230);"></span></i>
                                     <h5>Integrated liquidity</h5>
                                 </li>
 
