--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -82,7 +82,8 @@
                             <p><span style="font-style: normal;"><strong>GETModer
 <br>Initial Token Offering
 <br>Starting 15 April 2018
-<br>Ending 15 July 2018</strong></span></p>
+<br>Ending 15 July 2018</strong></span><br>GETModer Contribution Address:
+<br>To be announced soon !!!!!<span style="font-style: normal;"><strong><br></strong></span><br><span style="font-style: normal;"><strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
                         </div>
 
                         <div class="countdown" data-end="2018/04/15"></div>
