--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-v" data-rv-view="76">
+<section id="ext_menu-v" data-rv-view="156">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="80" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="160" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -76,9 +76,9 @@
                            <div class="container2">
                                 <h3 class="mbr-section-title display-2">GETModer 2018</h3>
                                 <div class="mbr-section-text lead">
-                                    <p>IEO starts on 15 March<br>and ends on 15 June</p>
+                                    <p>IEO starts on 15 April<br>and ends on 15 July</p>
                                 </div>
-                                <div class="countdown" data-end="2018/06/15"></div>
+                                <div class="countdown" data-end="2018/04/15"></div>
                             </div>
                         </div>
                         <div class="form-table mbr-valign-top col-md-9  formblock" data-form-type="formoid">
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="TyqBtwiXq4AUXW3z9xfRWbeZFtg+Ifi4/92J3JmO1eP4olxLO34YfsCzBfkhF0S1n99UKbe7eIFvEtOwUxxJ3e6QQQr02/zy71ANve/oUjg4kKddVu/LQwHMDxm+avE6" data-form-email="true">
+                                <input type="hidden" value="euKzWuJXH/cJ/DCeCkbAml+Q1Ufxh79f5XW8Gb14pKDiAQF9ipNIflUnyNf0yvds/RVXlYM2mHJpvd6fcMPakH/gTHzaAph/BED5Q54OmOwmZ2ceQh0rWdI5CkW4lc4S" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -113,7 +113,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="78" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="158" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
