--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="86" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="86" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -82,8 +82,7 @@
                             <p><span style="font-style: normal;"><strong>GETModer
 <br>Initial Token Offering
 <br>Starting 15 April 2018
-<br>Ending 15 July 2018</strong></span><span style="font-style: normal;"><strong><br></strong></span><br>GETModer Contribution Address:
-<br><strong>0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1<br></strong><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>1 ETH = 12,000 GTMR Token</strong></span><br><span style="font-style: normal;"><strong>Minimum contribution 0.1 ETH</strong></span><span style="font-style: normal;"><strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
+<br>Ending 15 July 2018</strong></span><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>1 ETH = 12,000 GTMR Token</strong></span><br><span style="font-style: normal;"><strong>Minimum contribution 0.1 ETH</strong></span><span style="font-style: normal;"><strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
                         </div>
 
                         <div class="countdown" data-end="2018/04/15"></div>
